src/objects/Client_Plan__c.object
<CustomObject>
    <description>The Client Plan object will store monthly margin and target dollar values related to specific account (client) records. These records will be inserted via periodic data load gathered by the Mosaic business team.</description>
    <fields>
        <fullName>Calculated_Margin_Goal__c</fullName>
        <formula>Margin_Goal__c /  Revenue_Goal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Margin Goal %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The specific client associated to this plan record</inlineHelpText>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Plans</relationshipLabel>
        <relationshipName>Client_Plans</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>The specific fiscal year for this client plan</inlineHelpText>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Service__c</fullName>
        <inlineHelpText>Integrated Service Associated with plan values for this client</inlineHelpText>
        <label>Integrated Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Integrated_Service</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin_Goal_Percent__c</fullName>
        <inlineHelpText>The margin target for the specified client/month, expressed as a %</inlineHelpText>
        <label>Margin Goal %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Goal__c</fullName>
        <inlineHelpText>The margin target for the specified client/month expressed in $</inlineHelpText>
        <label>Margin Goal $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <inlineHelpText>The specific month for this client plan</inlineHelpText>
        <label>Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated Mosaic Practice for this client plan</inlineHelpText>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Client Plans</relationshipLabel>
        <relationshipName>Client_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Goal__c</fullName>
        <inlineHelpText>The revenue goal for this client/month expressed in $</inlineHelpText>
        <label>Revenue Goal $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Client Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Client Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>